[gd_scene load_steps=6 format=2]

[ext_resource path="res://Image-assets/main-menu.png" type="Texture" id=1]
[ext_resource path="res://Fonts/main_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Image-assets/button-three.png" type="Texture" id=3]
[ext_resource path="res://Scripts/main_menu.gd" type="Script" id=4]
[ext_resource path="res://Scenes/options.tscn" type="PackedScene" id=5]

[node name="main_menu" type="Node"]
script = ExtResource( 4 )

[node name="main-menu" type="Sprite" parent="."]
position = Vector2( 216, 384 )
texture = ExtResource( 1 )

[node name="play" type="TextureButton" parent="."]
margin_left = 146.015
margin_top = 342.0
margin_right = 291.015
margin_bottom = 392.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playLabel" type="Label" parent="play"]
margin_left = 56.3623
margin_top = 14.4401
margin_right = 88.3623
margin_bottom = 28.4401
custom_fonts/font = ExtResource( 2 )
text = "PLAY"
align = 1
valign = 1

[node name="options" type="TextureButton" parent="."]
margin_left = 142.857
margin_top = 406.0
margin_right = 287.857
margin_bottom = 456.0
rect_pivot_offset = Vector2( 116.772, 15.2478 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionsLabel" type="Label" parent="options"]
margin_left = 47.8181
margin_top = 14.4401
margin_right = 98.8181
margin_bottom = 28.4401
custom_fonts/font = ExtResource( 2 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="TextureButton" parent="."]
margin_left = 142.857
margin_top = 470.0
margin_right = 287.857
margin_bottom = 520.0
rect_pivot_offset = Vector2( 158.672, -44.5622 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitLabel" type="Label" parent="exit"]
margin_left = 56.3623
margin_top = 14.4401
margin_right = 82.3623
margin_bottom = 28.4401
custom_fonts/font = ExtResource( 2 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="optionsModal" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = 47.6559
margin_top = 320.403
margin_right = 385.656
margin_bottom = 608.403
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
